# clientT

./: setup-env.agent
client/: CMakeLists.txt
client/src/: MainWindow.cpp  MainWindow.h  ServerApiClient.cpp  ServerApiClient.h  VideoWorker.cpp  VideoWorker.h  main.cpp
skills/scripts/: install-client-dev-tools.sh  install-server-dev-tools.ps1  install-vcpkg.sh  install-vscode-extensions.ps1  install-vscode-extensions.sh  setup-env.ps1  setup-env.sh  verify-env.ps1  verify-env.sh
